[package]
name = "beer1"
version = "0.1.0"
authors = ["Jeffrey Drake <jeffrey@madebyjeffrey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7", features = ["serde", "v4"]}